# Kepler-Solver

./: BM_shims.cpp  BM_shims.h  BM_starter.cpp  BM_starter.h  CMakeLists.txt  Kepler-Solver.cpp  KeplerSolver.cpp  KeplerSolver.h  PadeApprox.cpp  PadeApprox.h  README.md  TOY_KeplerSolver.csv  TOY_keplersolver.f95  TOY_ks.cpp  benchmark.cpp  benchmark.h  bm_starter.cpp  classic.cpp  classic.h  copyright.txt  cuberoot.cpp  cuberoot.h  deltas.cpp  deltas.h  intel.cpp  intel.h  link_ks.bat  make_ks.bat.BAT  makefile  opt_starter.cpp  opt_starter.h  solver.cpp  solver.h  starter.cpp  starter.h  stdafx.cpp  stdafx.h  tests.cpp  tests.h  verify.cpp  (+1 more)
results/core-i7-2700k-linux/: Kepler-Solver_250_linux.out  Kepler-Solver_251_linux.out  Kepler-Solver_252_linux.out  Kepler-Solver_253_linux.out.txt  Kepler-Solver_254_linux.out  Kepler-Solver_255_linux.out.txt
results/core-i7-2700k-win10/: Kepler-Solver_250_win10.out  Kepler-Solver_251_win10.out  Kepler-Solver_251_win10.out.txt  Kepler-Solver_252_win10.out  Kepler-Solver_253_win10.out  Kepler-Solver_254_win10.out  Kepler-Solver_255_win10.out
results/macbook-pro-2010/: Kepler-Solver_250_macos.out  Kepler-Solver_251_macos.out  Kepler-Solver_252_macos.out  Kepler-Solver_253_macos.out.txt  Kepler-Solver_254_macos.out  Kepler-Solver_255_macos.out
results/xeon-E5-2640v3/: Kepler-Solver_250_linux.out.txt  Kepler-Solver_251_linux.out  Kepler-Solver_252_linux.out  Kepler-Solver_253_linux.out  Kepler-Solver_254_linux.out  Kepler-Solver_255_linux.out
results/xeon-platinum-8270/: Kepler-Solver_251_linux.out.txt  (+1 more)
(+16 files in other folders)
